Basic styling of leaderboard page

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,10 +7,12 @@
 @import
         "variables",
         "mixins",
-        "elements",
         "base",
         "utilities",
         "layout",
         "syntax-highlighting",
-        "partials/home"
+        "partials/home",
+        "partials/about",
+        "partials/leaderboard",
+        "partials/cv"
 ;
