--- a/_sass/partials/_home.scss
+++ b/_sass/partials/_home.scss
@@ -1,10 +1,15 @@
 
+.homepage-btns {
+  @include pixelated-btns($green-iterm, $black, 2em, 48vh);
+  margin: 20px;
+  height: 5%;
+}
+
 .main {
 
   height: 100vh;
   width: 100vw;
   text-align: center;
-
 
   @-webkit-keyframes typing {
       from { width: 100% }
