Adds draft folder and first few drafts

--- a/_sass/partials/_leaderboard.scss
+++ b/_sass/partials/_leaderboard.scss
@@ -11,6 +11,7 @@
     font-size: 3.5em;
     margin-top: 5%;
     margin-bottom: 5%;
+    -webkit-animation: flashing-text 1s step-end infinite;
   }
 
   ul {
