--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,7 @@
         "utilities",
         "layout",
         "syntax-highlighting",
+        "animations",
         "partials/home",
         "partials/about",
         "partials/leaderboard",
