--- a/css/main.scss
+++ b/css/main.scss
@@ -9,9 +9,12 @@
         "mixins",
         "base",
         "utilities",
-        "layout",
         "syntax-highlighting",
         "animations",
+        "partials/header",
+        "partials/posts",
+        "partials/blog-index",
+        "partials/footer",
         "partials/home",
         "partials/about",
         "partials/leaderboard",
