--- a/_sass/partials/_leaderboard.scss
+++ b/_sass/partials/_leaderboard.scss
@@ -2,6 +2,9 @@
 
   font-family: $typing-font;
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: $black;
 
   .numbers {
     font-size: 1em;
@@ -9,7 +12,8 @@
 
   h1 {
     font-size: 3.5em;
-    margin-top: 5%;
+    position: relative;
+    top: 6%;
     margin-bottom: 5%;
     -webkit-animation: flashing-text 1s step-end infinite;
   }
@@ -22,6 +26,7 @@
 
   li {
     margin: 3vh;
+    color: $white;
   }
 
   a {
