--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,6 +3,7 @@
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
+$medium-font-size: $base-font-size * 0.9;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
