--- a/_sass/partials/_posts.scss
+++ b/_sass/partials/_posts.scss
@@ -1,20 +1,47 @@
 .post-header {
     margin-bottom: $spacing-unit;
+    font-family: $heading-font;
 }
 
 .post-title {
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
+    margin-top: 2vh;
 
     @include media-query($on-laptop) {
         font-size: 36px;
     }
 }
 
+.post-title, .post-meta {
+    margin-left: 3vh;
+}
+
 .post-content {
     margin-bottom: $spacing-unit;
     letter-spacing: $letter-spacing--close;
+    margin: 5%;
+
+  .highlighted {
+
+    border-top-right-radius:105px;
+    -moz-border-radius-topright:105px;
+    -webkit-border-top-right-radius:105px;
+
+    -webkit-border-bottom-left-radius: 102px;
+    -moz-border-radius-bottomleft: 102px;
+    border-bottom-left-radius: 102px;
+
+    padding-top: 3px;
+    padding:3px;
+    background: rgba($green-iterm--dark, 0.3);
+ }
+
+  em {
+    font-style:normal;
+    background-color: $green-iterm;
+  }
 
     h2 {
         font-size: 32px;
