Adds more blog posts

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,6 +35,10 @@ body {
   background:$highlighted-text-bg-color ;
 }
 
+.center-align {
+  text-align:center;
+}
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
