Completes migration of old blog posts

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -39,6 +39,10 @@ body {
   text-align:center;
 }
 
+.make-green {
+  color: $green-iterm;
+}
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
