Adds a heading font class

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -43,6 +43,10 @@ body {
   color: $green-iterm;
 }
 
+.heading-font {
+  font-family:$heading-font;
+}
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
