Adds mixin for nice link styles, applies them on blog posts and on the excerpts on the contents page

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -13,8 +13,6 @@
     }
   }
 
-
-
 @mixin pixelated-btns($bg-color, $font-color, $font-size, $btn-top) {
   border:none;
   outline:none;
@@ -55,4 +53,21 @@
     right: -6px;
     z-index: -2;
   }
+}
+
+
+@mixin wired-link-style ($text-color, $highlight-color) {
+  a { 
+      border-bottom: 3px solid $highlight-color;
+      box-shadow: inset 0 -5px 0 $highlight-color;
+      color: $text-color;
+      text-decoration: none;
+
+      &:hover {
+        background-color: $highlight-color;
+        color: $text-color;
+        text-decoration: none;
+
+      }
+    }
 }
