--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,6 +26,7 @@ $green-iterm    :    #00C300;
 $green-iterm--dark: darken($green-iterm, 15%);
 $green-iterm--light: lighten($green-iterm, 15%);
 $green-metallic :    #438240;
+$green-iterm--pale: #98C898;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
