--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,7 @@
         "utilities",
         "syntax-highlighting",
         "animations",
+        "media-queries",
         "partials/header",
         "partials/posts",
         "partials/blog-index",
