--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -47,6 +47,15 @@ body {
   font-family:$heading-font;
 }
 
+.highlighted {
+  border-bottom: 3px solid $green-iterm--pale;
+  box-shadow: inset 0 -5px 0 $green-iterm--pale;
+}
+
+.highlighted-link-styles {
+  @include wired-link-style ($text-color, $green-iterm--pale);
+}
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
@@ -149,7 +158,7 @@ blockquote {
  */
 pre,
 code {
-    text-align: center;
+    margin-left:10px;
     font-size: $base-font-size;
   }
 
