--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "variables",
+        "media-queries",
         "mixins",
         "base",
         "utilities",
