Adds basic media queries for homepage

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -49,6 +49,7 @@ $content-width:    800px;
 $homepage-bp--1:   916px;
 $homepage-bp--2:   680px;
 $homepage-bp--3:   573px;
+$homepage-bp--4:   468px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
