Improves media queries homepage on mobile

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -50,6 +50,7 @@ $homepage-bp--1:   916px;
 $homepage-bp--2:   680px;
 $homepage-bp--3:   573px;
 $homepage-bp--4:   468px;
+$homepage-bp--5:   400px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
