--- a/_sass/partials/_home.scss
+++ b/_sass/partials/_home.scss
@@ -2,7 +2,7 @@
 .homepage-btns {
   @include pixelated-btns($green-iterm, $black, 2em, 48vh);
   margin: 20px;
-  height: 5%;
+  height: 5vh;
 }
 
 .main {
@@ -11,6 +11,7 @@
   width: 100vw;
   text-align: center;
   background-color: $black;
+  overflow: hidden;
 
   .heading {
       color: $green-iterm;
@@ -76,18 +77,29 @@
     .homepage-btns {
       @include pixelated-btns($green-iterm, $black, 1em, 38vh);
       margin: 20px;
-      height: 3.5%;
+      height: 5%;
     }
   }
 
-  @include media-query($homepage-bp--3){
+  @include media-query($homepage-bp--4){
     .heading {
       font-size:1.7em;
     }
     .homepage-btns {
       @include pixelated-btns($green-iterm, $black, 1em, 38vh);
-      margin: 20px;
+      margin: 20px 10px;
       height: 3.5%;
+    }
+  }
+
+  @include media-query($homepage-bp--5){
+    .heading {
+      font-size:1.3em;
+    }
+    .homepage-btns {
+      @include pixelated-btns($green-iterm, $black, 0.8em, 38vh);
+      margin: 20px 10px;
+      height: 3.2%;
     }
   }
 }
