Adds basic media queries to posts

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,7 +58,10 @@ $code-bg-color      : #E8E9ED;
   // Blog Index page:
   $blogindex-bp--1:  1200px;
   $blogindex-bp--2:  700px;
-
+  // Post
+  $post-bp--1:1100px;
+  $post-bp--2: 670px;
+  $post-bp--3: 570px;
 
 //Layout
   // Footer
