--- a/_sass/partials/_posts.scss
+++ b/_sass/partials/_posts.scss
@@ -24,6 +24,25 @@
     margin: 1% 20% 5% 20%;
     max-width: 75vw;
 
+    @include media-query($post-bp--1){
+      margin: 1% 18% 5% 18%;
+      max-width:80vw;
+    }
+
+    @include media-query($homepage-bp--1){
+      margin: 1% 15% 5% 15%;
+    }
+
+    @include media-query($post-bp--2){
+      margin: 1% 5% 5% 5%;
+      max-width:95%;
+    }
+
+    @include media-query($post-bp--3){
+      margin: 1% 3% 5% 3%;
+      width:95%;
+    }
+
   img, code {
     display: block;
     margin: 0 auto;
