--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -12,9 +12,9 @@ $letter-spacing--close: -1px;
 //Fonts
 
 $font-url--google : 'https://fonts.googleapis.com/css?family=Press+Start+2P';
-$base-font-family : "Letter Gothic Std", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family : "Tahoma", "Andale Mono", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $typing-font      : "Press Start 2P";
-$heading-font     : "Futura";
+$heading-font     : "Futura", "Helvetica Neue";
 $code-font        :  "Source Code Pro";
 $caption-font      : $heading-font;
 
