--- a/_sass/partials/_blog-index.scss
+++ b/_sass/partials/_blog-index.scss
@@ -19,7 +19,7 @@
   }
 
   .excerpt {
-    letter-spacing: -1px;
+    font-size: $medium-font-size;
   }
 
   @include media-query($blogindex-bp--1){
