--- a/css/main.scss
+++ b/css/main.scss
@@ -20,5 +20,6 @@
         "partials/home",
         "partials/about",
         "partials/leaderboard",
-        "partials/cv"
+        "partials/cv",
+        "partials/posts/8bitbtns"
 ;
