--- a/_sass/partials/_posts.scss
+++ b/_sass/partials/_posts.scss
@@ -13,6 +13,7 @@
     }
 }
 
+
 .post-title, .post-meta {
     margin-left: 3vh;
 }
@@ -34,11 +35,17 @@
     @include media-query($post-bp--2){
       margin: 1% 5% 5% 5%;
       max-width:95%;
+      .eightbit-btns--post{
+        left:35%
+      }
     }
 
     @include media-query($post-bp--3){
       margin: 1% 3% 5% 3%;
       width:95%;
+      .eightbit-btns--post{
+        left:35%
+      }
     }
 
   img, code {
