--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -15,7 +15,7 @@
       content: "";
       display: block;
       position: absolute;
-      background-color: $green-iterm;
+      background-color: $bg-color;
       top: 10px;
       bottom: 10px;
       left: -10px;
@@ -28,7 +28,7 @@
     content: "";
     display: block;
     position: absolute;
-    background-color: $green-iterm;
+    background-color: $bg-color;
     top: 4px;
     bottom: 4px;
     left: -6px;
