--- a/_sass/partials/posts/_8bitbtns.scss
+++ b/_sass/partials/posts/_8bitbtns.scss
@@ -1,5 +1,5 @@
 .eightbit-btns--post {
-  @include pixelated-btns($green-iterm, $black, 2em);
+  @include pixelated-btns($green-iterm--dark, $white, 2em);
   top: 0vh;
   left: 35%;
   margin-bottom: 5vh;
