--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
   {% include head.html %}
 
   <body>
 
-    {% include header.html %}
+    {% include sidebar.html %}
 
-        {{ content }}
-
-    {% include footer.html %}
-
+    <div class="content container">
+      {{ content }}
+    </div>
+    <script id="dsq-count-scr" src="//adzz.disqus.com/count.js" async></script>
   </body>
-
 </html>
