--- a/_sass/partials/posts/_8bitbtns.scss
+++ b/_sass/partials/posts/_8bitbtns.scss
@@ -1,3 +1,44 @@
+// Mixin
+
+@mixin pixelated-btns($bg-color, $font-color, $font-size) {
+  border:none;
+  outline:none;
+  text-align:center;
+  cursor:pointer;
+  position: relative;
+  background: $bg-color;
+  color: $font-color;
+  font-size: $font-size;
+  z-index: 1;
+
+  &:before {
+      content: "";
+      display: block;
+      position: absolute;
+      background-color: $bg-color;
+      top: 10px;
+      bottom: 10px;
+      left: -10px;
+      right: -10px;
+      z-index: -1;
+
+  }
+
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: $bg-color;
+    top: 4px;
+    bottom: 4px;
+    left: -6px;
+    right: -6px;
+    z-index: -2;
+  }
+}
+
+//  BTNS
+
 .eightbit-btns--post {
   @include pixelated-btns($green-iterm--dark, $white, 2em);
   top: 0vh;
@@ -7,7 +48,6 @@
     top: 1vh;
   }
 }
-
 
 .btn-demo{
   border: 3px solid red;
@@ -56,6 +96,7 @@
   color:$white;
   background-color: $black;
   border: none;
+  line-height: 1.25;
   &:before{
     background-color: $black;
     border: none;
