--- a/css/main.scss
+++ b/css/main.scss
@@ -6,5 +6,6 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "variables",
-        "partials/posts/8bitbtns"
+        "partials/posts/8bitbtns",
+        "partials/posts/custom"
 ;
