adds hired link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,6 +29,7 @@
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
       <a class="sidebar-nav-item" href="https://twitter.com/ItizAdz">Twitter</a>
     </nav>
+    <p>Looking for a job? <a href="https://hired.com/x/1njar"> Get Hired</a></p>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
