adds currying post

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,7 @@
       <a class="sidebar-nav-item" href="https://twitter.com/ItizAdz">Twitter</a>
     </nav>
     <p>Looking for a job? <a href="https://hired.com/x/1njar"> Get Hired</a></p>
+    <p>Are you hungry?<a href="https://www.hellofresh.co.uk/offers/eqxmfn/?c=LANCASTER2&utm_source=raf-share&utm_medium=referral&utm_campaign=clipboard"> Get Food</a></p>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
