--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,7 @@
 <head>
+{% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include analytics.html %}
+{% endif %}
   <meta charset="utf-8">
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
